--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">Welfare</string>
 
+    <!-- General -->
+    <string name="ok">OK</string>
+    <string name="invalid_server_response">Invalid Server Response.</string>
+    <string name="connection_error">A connection error occurred, please ensure a stable internet connection is available and try again.</string>
+
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
@@ -16,6 +21,7 @@
     <string name="remember_me">Remember Me</string>
     <string name="signing_in">Signing in...</string>
     <string name="app_logo">Welfare Logo</string>
+    <string name="login_call_error">Error while creating login request.</string>
 
     <!-- Strings related to the home screen -->
     <string name="welcome">Welcome!</string>
