Implemented nav bar and basic fragments.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,10 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
+    <!-- Strings related to the animals screen -->
+
+    <!-- Strings related to the residences screen -->
+
+    <!-- Strings related to the reminders screen -->
+
 </resources>
