--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,11 @@
     <string name="invalid_server_response">Invalid Server Response.</string>
     <string name="connection_error">A connection error occurred, please ensure a stable internet connection is available and try again.</string>
 
+    <!-- Notification strings -->
+    <string name="channel_id">WELFARE_CHANNEL</string>
+    <string name="channel_name">welfare_channel</string>
+    <string name="channel_description">The notification channel for the Welfare app.</string>
+
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
