--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,7 +47,7 @@
     <!-- Strings related to the residences screen -->
     <string name="search_address">Street Address</string>
     <string name="search_shack">Shack ID</string>
-
+    <string name="search_res_animals">Animals:</string>
     <string name="search_residence">Searching Residence</string>
     <string name="street_address">Street Address:</string>
     <string name="shack_id">Shack ID:</string>
