MORE error handling (empty search and internal error).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,8 @@
     <string name="latitude">Lat:</string>
     <string name="longitude">Long:</string>
     <string name="conn_error_res_search">A connection error occurred while trying to retrieve Resident info. Please check your connection and try again.</string>
+    <string name="internal_error_res_search">An internal error occurred while trying to retrieve Resident info. Some information might be missing or incorrect.</string>
+    <string name="res_search_data_required">Please provide at least one entry in the search fields to do a search.</string>
     <string name="unknown_error_res_search">An unknown error occurred while trying to retrieve Resident info. Please try again later.</string>
 
 
@@ -63,5 +65,6 @@
     <string name="search">Search</string>
     <string name="cancel">Cancel</string>
     <string name="download_err">Download Error</string>
+    <string name="data_required">Data Required</string>
 
 </resources>
