--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,10 +49,10 @@
     <string name="search_shack">Shack ID</string>
     <string name="search_res_animals">Animals:</string>
     <string name="search_residence">Searching Residence</string>
-    <string name="street_address">Street Address:</string>
-    <string name="shack_id">Shack ID:</string>
-    <string name="latitude">Lat:</string>
-    <string name="longitude">Long:</string>
+    <string name="search_street_address">Street Address:</string>
+    <string name="search_shack_id">Shack ID:</string>
+    <string name="search_latitude">Lat:</string>
+    <string name="search_longitude">Long:</string>
     <string name="conn_error_res_search">A connection error occurred while trying to retrieve Resident info. Please check your connection and try again.</string>
     <string name="internal_error_res_search">An internal error occurred while trying to retrieve Resident info. Some information might be missing or incorrect.</string>
     <string name="res_search_data_required">Please provide at least one entry in the search fields to do a search.</string>
@@ -66,5 +66,6 @@
     <string name="cancel">Cancel</string>
     <string name="download_err">Download Error</string>
     <string name="data_required">Data Required</string>
+    <string name="notes">Notes</string>
 
 </resources>
