Display network actions to user on residence activity. Also updated Utils to make ProgressDialog management a bit easier.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,8 @@
     <!-- Strings related to the animals screen -->
 
     <!-- Strings related to the residences screen -->
+    <string name="retrieving_res_data">Retrieving Residence...</string>
+    <string name="updating_res_data">Updating Residence...</string>
     <string name="search_address">Street Address</string>
     <string name="search_shack">Shack ID</string>
     <string name="search_res_animals">Animals:</string>
