--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,8 +55,11 @@
     <string name="search_shack_id">Shack ID:</string>
     <string name="search_latitude">Lat:</string>
     <string name="search_longitude">Long:</string>
+    <string name="res_update_internal_err">An internal error occurred while trying to update residence. Please try again.</string>
+    <string name="res_update_unknown_err">An unknown error occurred while trying to update residence. Please try again.</string>
     <string name="res_download_err">An error occurred trying to retrieve data for this residence. Please try again.</string>
     <string name="res_search_err_view">Resident search had no results or an error occurred. Try again later.</string>
+    <string name="res_update_conn_err">A connection error occurred while trying to update resident info. Please check your connection and try again.</string>
     <string name="conn_error_res_search">A connection error occurred while trying to retrieve Resident info. Please check your connection and try again.</string>
     <string name="internal_error_res_search">An internal error occurred while trying to retrieve Resident info. Some information might be missing or incorrect.</string>
     <string name="res_search_data_required">Please provide at least one entry in the search fields to do a search.</string>
