--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,7 @@
     <string name="notes">Notes</string>
     <string name="no_change">No Data Changed</string>
     <string name="fetch_error_title">Error Fetching Data</string>
+    <string name="update_error_title">Error Updating Data</string>
     <string name="nothing_to_see">Nothing to see here</string>
     <string name="retry">Retry</string>
     <string name="update_successful">Changes submitted successfully!</string>
