Added label, added data object for spinner.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,6 +82,7 @@
     <string name="update_error_title">Error Updating Data</string>
     <string name="nothing_to_see">Nothing to see here</string>
     <string name="retry">Retry</string>
+    <string name="species">Species</string>
     <string name="update_successful">Changes submitted successfully!</string>
 
 </resources>
