--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,11 @@
     <string name="pet_search_err_view">Pet search had no results or an error occurred. Try again later.</string>
     <string name="search_pet_name">Pet Name</string>
     <string name="search_pet_welfare">Pet Welfare Number</string>
+    <string name="unknown_error_pet_search">An unknown error occurred while trying to retrieve pet info. Please try again later.</string>
+
+    <string name="pet_update_conn_err">A connection error occurred while trying to update pet info. Please check your connection and try again.</string>
+    <string name="conn_error_pet_search">A connection error occurred while trying to retrieve pet info. Please check your connection and try again.</string>
+    <string name="internal_error_pet_search">An internal error occurred while trying to retrieve pet info. Some information might be missing or incorrect.</string>
 
     <!-- Strings related to the residences screen -->
     <string name="retrieving_res_data">Retrieving Residence...</string>
