--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
     <string name="search_shack_id">Shack ID:</string>
     <string name="search_latitude">Lat:</string>
     <string name="search_longitude">Long:</string>
+    <string name="address_shack_req">Please provide at least the address or the shack id.</string>
     <string name="res_update_internal_err">An internal error occurred while trying to update residence. Please try again.</string>
     <string name="res_update_unknown_err">An unknown error occurred while trying to update residence. Please try again.</string>
     <string name="res_download_err">An error occurred trying to retrieve data for this residence. Please try again.</string>
@@ -72,8 +73,7 @@
     <string name="internal_error_res_search">An internal error occurred while trying to retrieve Resident info. Some information might be missing or incorrect.</string>
     <string name="res_search_data_required">Please provide at least one entry in the search fields to do a search.</string>
     <string name="unknown_error_res_search">An unknown error occurred while trying to retrieve Resident info. Please try again later.</string>
-
-
+    
     <!-- Strings related to the reminders screen -->
 
     <!--general-->
