--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,8 +51,9 @@
     <string name="search_pet_welfare_res">Welfare No:</string>
     <string name="search_pet_species_res">Species:</string>
     <string name="search_pet_dob_res">DOB:</string>
+    <string name="search_pet_dob">Approx. Date of Birth</string>
     <string name="unknown_error_pet_search">An unknown error occurred while trying to retrieve pet info. Please try again later.</string>
-
+    <string name="pet_download_err">An error occurred trying to retrieve data for this residence. Please try again.</string>
     <string name="pet_update_conn_err">A connection error occurred while trying to update pet info. Please check your connection and try again.</string>
     <string name="conn_error_pet_search">A connection error occurred while trying to retrieve pet info. Please check your connection and try again.</string>
     <string name="internal_error_pet_search">An internal error occurred while trying to retrieve pet info. Some information might be missing or incorrect.</string>
@@ -94,6 +95,7 @@
     <string name="download_err">Download Error</string>
     <string name="data_required">Data Required</string>
     <string name="notes">Notes</string>
+    <string name="treatments">Treatments</string>
     <string name="no_change">No Data Changed</string>
     <string name="fetch_error_title">Error Fetching Data</string>
     <string name="update_error_title">Error Updating Data</string>
