--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,7 @@
     <!-- Strings related to the home screen -->
     <string name="welcome">Welcome!</string>
     <string name="sign_out">Sign Out</string>
-    <string name="animals">Animals</string>
+    <string name="animals">Pets</string>
     <string name="residences">Residences</string>
     <string name="reminders">Reminders</string>
     <string name="nav_header_desc">Navigation header</string>
@@ -75,7 +75,7 @@
     <string name="updating_res_data">Updating Residence...</string>
     <string name="search_address">Street Address</string>
     <string name="search_shack">Shack ID</string>
-    <string name="search_res_animals">Animals:</string>
+    <string name="search_res_animals">Pets:</string>
     <string name="search_residence">Searching Residence</string>
     <string name="search_street_address">Street Address:</string>
     <string name="search_shack_id">Shack ID:</string>
