--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,10 @@
 
     <!-- Strings related to the residences screen -->
     <string name="remove_pet_title">Remove pet from residence?</string>
+    <string name="delete_pet_title">Permanently remove Pet?</string>
+    <string name="delete_res_title">Permanently remove Residence?</string>
+    <string name="delete_res_msg">Are you sure you want to permanently delete this residence off the system? This action can not be undone.</string>
+    <string name="delete_pet_msg">Are you sure you want to permanently delete this pet off the system? This action can not be undone.</string>
     <string name="remove_pet_message" formatted="true">Are you sure you want to remove %1$s from this residence?</string>
     <string name="remove_pet_yes">Remove Pet</string>
     <string name="remove_pet_no">Cancel</string>
@@ -96,6 +100,8 @@
     <!-- Strings related to the reminders screen -->
 
     <!--general-->
+    <string name="delete">Delete</string>
+    <string name="keep">Keep</string>
     <string name="any">Any</string>
     <string name="search">Search</string>
     <string name="curr_res">Current Residence:</string>
