--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,10 @@
     <!-- Strings related to the reminders screen -->
 
     <!--general-->
+    <string name="delete_done">Delete Completed</string>
+    <string name="delete_error">Delete Error</string>
+    <string name="delete_error_msg">An error occurred while trying to delete. Please try again.</string>
+    <string name="delete_error_timeout_msg">An error occurred while trying to delete. Please check your data connection and try again.</string>
     <string name="delete">Delete</string>
     <string name="keep">Keep</string>
     <string name="any">Any</string>
