Think all the welfare IDs are gone now.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,16 +47,14 @@
     <!-- Strings related to the animals screen -->
     <string name="pet_search_err_view">Pet search had no results or an error occurred. Try again later.</string>
     <string name="search_pet_name">Pet Name</string>
-    <string name="search_pet_welfare">Pet Welfare Number</string>
     <string name="search_pets">Searching Pets...</string>
     <string name="updating_pet_data">Updating Pet...</string>
     <string name="retrieving_pet_data">Retrieving Pet...</string>
     <string name="search_pet_name_res">Name:</string>
-    <string name="search_pet_welfare_res">Welfare No:</string>
     <string name="search_pet_species_res">Species:</string>
     <string name="search_pet_dob_res">DOB:</string>
     <string name="search_pet_dob">Approx. Date of Birth</string>
-    <string name="pet_det_req">Please provide at least the pet name, welfare number and species.</string>
+    <string name="pet_det_req">Please provide at least the pet name and species.</string>
     <string name="unknown_error_pet_search">An unknown error occurred while trying to retrieve pet info. Please try again later.</string>
     <string name="pet_download_err">An error occurred trying to retrieve data for this pet. Please try again.</string>
     <string name="pet_update_conn_err">A connection error occurred while trying to update pet info. Please check your connection and try again.</string>
@@ -116,7 +114,6 @@
     <string name="change_res">Change Residence</string>
     <string name="cancel">Cancel</string>
     <string name="name">Name:</string>
-    <string name="welfare_no">Welfare No:</string>
     <string name="download_err">Download Error</string>
     <string name="data_required">Data Required</string>
     <string name="notes">Notes</string>
