Added desc and gender UI. Allow gender UI to enable and disable.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="sign_out">Sign Out</string>
     <string name="animals">Pets</string>
     <string name="residences">Residences</string>
+    <string name="description">Description</string>
     <string name="reminders">Reminders</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
