Added version to login screen. Upped version.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,4 +141,6 @@
     <string name="species">Species</string>
     <string name="update_successful">Changes submitted successfully!</string>
 
+    <string name="version">Version:</string>
+
 </resources>
