--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,7 @@
     <!-- Strings related to the animals screen -->
     <string name="pet_search_err_view">Pet search had no results or an error occurred. Try again later.</string>
     <string name="search_pet_name">Pet Name</string>
+    <string name="pet_search_title">Search and Choose a pet</string>
     <string name="search_pets">Searching Pets...</string>
     <string name="updating_pet_data">Updating Pet...</string>
     <string name="retrieving_pet_data">Retrieving Pet...</string>
