--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,9 +22,7 @@
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
     <string name="remember_me">Remember Me</string>
     <string name="signing_in">Signing in...</string>
     <string name="app_logo">Welfare Logo</string>
@@ -114,6 +112,7 @@
     <string name="choose_date">Choose a date on which the reminder should be sent:</string>
     <string name="remove_pet_reminder_title">Remove pet from reminder?</string>
     <string name="remove_pet__reminder_message" formatted="true">Are you sure you want to remove %1$s from this reminder?</string>
+    <string name="date_required">Date required to set reminder</string>
 
     <!--general-->
     <string name="deleting_pet_from_sys">Deleting pet from system...</string>
