--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,11 @@
     <string name="reminder_update_internal_err">An internal error occurred while trying to update reminder. Please try again.</string>
     <string name="reminder_update_unknown_err">An unknown error occurred while trying to update reminder. Please try again.</string>
     <string name="reminder_update_conn_err">A connection error occurred while trying to update reminder info. Please check your connection and try again.</string>
+    <string name="internal_error_reminder_search">An internal error occurred while trying to retrieve reminder info. Some information might be missing or incorrect.</string>
+    <string name="conn_error_reminder_search">A connection error occurred while trying to retrieve reminder info. Please check your connection and try again.</string>
+    <string name="unknown_error_reminder_search">An unknown error occurred while trying to retrieve reminder info. Please try again later.</string>
+    <string name="search_reminders">Retrieving Reminders...</string>
+
 
     <!-- Strings related to the animals screen -->
     <string name="pet_search_err_view">Pet search had no results or an error occurred. Try again later.</string>
