--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,6 +124,7 @@
     <string name="unknown_error_res_search">An unknown error occurred while trying to retrieve Resident info. Please try again later.</string>
 
     <!-- Strings related to the reminders screen -->
+    <string name="reminder_title">Reminder</string>
     <string name="choose_date">Choose a date on which the reminder should be sent:</string>
     <string name="remove_pet_reminder_title">Remove pet from reminder?</string>
     <string name="remove_pet__reminder_message" formatted="true">Are you sure you want to remove %1$s from this reminder?</string>
